# StaFusion

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  INSPECTION_REPORT.md  MANIFEST.in  README.md  TODO.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml  release.yml
api/: index.html
datafusion_ml/: __init__.py  api.py  cli.py  config.py  errors.py  fusion.py  modeling.py
datafusion_ml/service/: fusion_service.py
datafusion_ml/web/: app.py  config.py  errors.py  main.py  middleware.py  schemas.py
datafusion_ml/web/routers/: fusion.py
docs/: api.md  index.md  usage.md
docs/tutorials/: advanced.md  breast_cancer.md  quickstart.md
examples/: advanced_custom.ipynb  breast_cancer.ipynb  diabetes.ipynb  intro.ipynb  prepare_sklearn_breast_cancer.py  smoke.py
examples/data/: A_bc.csv  A_bc_enriched.csv  B_bc.csv  B_bc_enriched.csv  fused_bc.csv
frontend/docker/: Dockerfile  entrypoint.sh  nginx.conf
scripts/: rewrite_notebooks.py
search/: search_index.json
tests/: test_api.py  test_api_extended.py  test_file_validation.py  test_fusion_basic.py
tutorials/advanced/: index.html
tutorials/breast_cancer/: index.html
tutorials/quickstart/: index.html
usage/: index.html
