[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datafusion-ml"
version = "0.1.0"
description = "Statistical fusion of two datasets using overlapping features and PyCaret models."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
license = { text = "MIT" }
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3"
]

[project.optional-dependencies]
ml = [
  "pycaret==3.3.2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["datafusion_ml*"]
exclude = []

