[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datafusion-ml"
version = "0.1.0"
description = "Statistical fusion of two datasets using overlapping features and PyCaret models."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
license = { text = "MIT" }
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3"
]

keywords = ["data fusion", "statistical matching", "pycaret", "machine learning", "imputation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://example.com/datafusion-ml"
Repository = "https://example.com/datafusion-ml/repo"
Issues = "https://example.com/datafusion-ml/issues"

[project.optional-dependencies]
ml = [
  "pycaret==3.3.2"
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]
dev = [
  "pytest>=8.2",
  "mypy>=1.10",
  "pytest-cov>=5.0",
  "ruff>=0.5.0",
]

[project.scripts]
datafusion-ml = "datafusion_ml.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["datafusion_ml*"]
exclude = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q --disable-warnings"

